--- a/frontend/src/app/dashboard/dashboard.component.html
+++ b/frontend/src/app/dashboard/dashboard.component.html
@@ -10,16 +10,37 @@
 
 <!-- Video Upload Dialog -->
 <ng-template #videoUploadDialog>
-  <h2>Upload Video</h2>
-  <input type="file" (change)="onVideoFileSelected($event)" accept="video/*">
-  <button mat-button color="primary" (click)="submitVideo()">Submit</button>
+  <div class="dialog-content">
+    <h2>Upload Video</h2>
+    <input type="file" (change)="onVideoFileSelected($event)" accept="video/*">
+    <br><br>
+    <h2>Add Preview Image</h2>
+    <input type="file" (change)="onPreviewImageSelected($event)" accept="image/*">
+    <br><br>
+    <h2>Model Name</h2>
+    <input type="text" [(ngModel)]="modelName" placeholder="Enter collection name">
+    &nbsp; &nbsp;
+    <button mat-raised-button color="primary" (click)="submitVideo()">Submit</button>
+    <button mat-stroked-button color="primary" (click)="closeDialog()">Cancel</button>
+  </div>
 </ng-template>
 
 <!-- Picture Upload Dialog -->
 <ng-template #pictureUploadDialog>
-  <h2>Upload Pictures</h2>
-  <input type="file" multiple (change)="onPictureFilesSelected($event)" accept="image/*">
-  <button mat-button color="primary" (click)="submitPictures()">Submit</button>
+  <div class="dialog-content">
+    <h2>Upload Pictures</h2>
+    <input type="file" multiple (change)="onPictureFilesSelected($event)" accept="image/*">
+    <br><br>
+    <h2>Add Preview Image</h2>
+    <input type="file" (change)="onPreviewImageSelected($event)" accept="image/*">
+    <br><br>
+    <h2>Model Name</h2>
+    <input type="text" [(ngModel)]="modelName" placeholder="Enter collection name">
+    &nbsp; &nbsp;
+    <button mat-raised-button color="primary" (click)="submitPictures()">Submit</button>
+    <button mat-stroked-button color="primary" (click)="closeDialog()">Cancel</button>
+  </div>
 </ng-template>
+
 
 
