Unity init + ignore

--- a/frontend/src/app/dashboard/dashboard.component.scss
+++ b/frontend/src/app/dashboard/dashboard.component.scss
@@ -1,7 +1,7 @@
 .dashboard-body {
     background-color: #333333; /* replace with your desired dark color */
     color: #a33d3d; /* set text color to white or another contrasting color */;
-    height: 91vh;
+    height: 91%;
 }
 
 .dashboard-title {
