Replace Auth0 on frontend

--- a/frontend/src/app/homepage/homepage.component.html
+++ b/frontend/src/app/homepage/homepage.component.html
@@ -1,8 +1,6 @@
 <mat-card class="container" mat-background-image="url('../../assets/images/background.jpg')">
     <h1>ObjectReviver</h1>
-    <button (click)="authService.loginWithRedirect()" mat-raised-button color="primary" >Login</button>
+    <button (click)="goToLogin()" mat-raised-button color="primary">Login</button>
+    <button (click)="goToRegister()" mat-raised-button color="primary">Register</button>
 </mat-card>
-
-  
-  
   
