--- a/frontend/src/app/homepage/homepage.component.scss
+++ b/frontend/src/app/homepage/homepage.component.scss
@@ -1,22 +1,23 @@
 .container {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center center;
-    background-image: url('../../assets/images/background.jpg');
-    background-image: cover;
-  }
-  
-  h1 {
-    font-size: 3rem;
-    margin-bottom: 2rem;
-  }
-  
-  button {
-    font-size: 1.5rem;
-  }
-  
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-image: url('../../assets/images/background.jpg');
+  background-image: cover;
+}
+
+h1 {
+  font-size: 3rem;
+  margin-bottom: 2rem;
+}
+
+button {
+  font-size: 1.5rem;
+  margin: 0.5rem;
+  width: 200px;
+}
