--- a/frontend/src/app/homepage/homepage.component.html
+++ b/frontend/src/app/homepage/homepage.component.html
@@ -1,5 +1,5 @@
-<mat-card class="container" mat-background-image="url('../../assets/images/background.jpg')">
-    <h1>ObjectReviver</h1>
+<mat-card class="container" mat-background-image="url('../../assets/images/v1.jpg')">
+    <h1>Object<span style="color: #7b1fa2;">Reviver</span></h1>
     <button (click)="goToLogin()" mat-raised-button color="primary">Login</button>
     <button (click)="goToRegister()" mat-raised-button color="primary">Register</button>
 </mat-card>
