--- a/frontend/src/app/dashboard/dashboard.component.html
+++ b/frontend/src/app/dashboard/dashboard.component.html
@@ -5,7 +5,7 @@
     <div class="dashboard-buttons">
       <button mat-raised-button color="primary" (click)="openVideoUploadDialog()" class="mat-button-block" class="wide-button">Upload Video</button>
       <button mat-raised-button color="primary" (click)="openPictureUploadDialog()" class="mat-button-block" class="wide-button">Upload Pictures</button>
-      <button mat-raised-button color="primary" routerLink="/" class="mat-button-block" class="wide-button">Portfolio</button>
+      <button mat-raised-button color="primary" routerLink="/portfolio" class="mat-button-block" class="wide-button">Portfolio</button>
     </div>  
   </div>
 
