--- a/frontend/src/app/toolbar/toolbar.component.html
+++ b/frontend/src/app/toolbar/toolbar.component.html
@@ -24,6 +24,10 @@
         <mat-icon>folder</mat-icon>
         <span>Portfolio</span>
       </button>
+      <button mat-menu-item routerLink="/explore">
+        <mat-icon>people</mat-icon>
+        <span>Explore</span>
+      </button>
       <button mat-menu-item (click)="logout()">
         <mat-icon>exit_to_app</mat-icon>
         <span>Logout</span>
