--- a/frontend/src/app/profile/profile.component.html
+++ b/frontend/src/app/profile/profile.component.html
@@ -1,4 +1,28 @@
-<ul *ngIf="auth.user$ | async as user">
-    <li>{{ user.name }}</li>
-    <li>{{ user.email }}</li>
-</ul>
+<div class="profile-container">
+    <app-toolbar></app-toolbar>
+  
+    <div class="profile-body">
+      <div class="profile-details">
+        <h1 class="profile-title">{{ user.firstName }} {{ user.lastName }}</h1>
+  
+        <div class="profile-info">
+          <div class="profile-label">Email:</div>
+          <div class="profile-value">{{ user.email }}</div>
+        </div>
+        
+        <button class="follow-button" (click)="toggleFollow()" [ngClass]="{'following': isFollowed}">
+          <mat-icon *ngIf="!isFollowed">person_add</mat-icon>
+          <mat-icon *ngIf="isFollowed">done</mat-icon>
+          <span>{{ isFollowed ? 'Following' : 'Follow' }}</span>
+        </button>
+      </div>
+  
+      <div class="portfolio-grid">
+        <div *ngFor="let model of models" class="portfolio-item">
+          <img [src]="model.preview" alt="Preview Image">
+          <div class="model-name">{{ model.name }}</div>
+        </div>
+      </div>
+    </div>
+  </div>
+  
