--- a/frontend/src/app/portfolio/portfolio.component.scss
+++ b/frontend/src/app/portfolio/portfolio.component.scss
@@ -22,6 +22,10 @@
   margin-bottom: 4%;
 }
 
+.portfolio-item.no-obj {
+  opacity: 0.5;
+}
+
 .portfolio-buttons {
     display: flex;
     flex-direction: column;
